fix: just remove scrollbar from every element...

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,15 @@
     --color-text-muted: #444753;
 } */
 
+* {
+    scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
 .text-outline {
     text-shadow:
         2px 0 0 black,
@@ -28,13 +37,4 @@
     /* Optional: for crisper text on some browsers */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-.remove-scrollbar {
-    scrollbar-width: none;
-}
-
-.remove-scrollbar::-webkit-scrollbar {
-    width: 0;
-    height: 0;
 }
